--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div id="a1"></div>
-            <pre>Made By:Nilendra Patel</pre>
+            <pre>Made By: Muskan Rai</pre>
         </div>
 
 
